--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "prismic-dom": "^2.2.4",
+    "prismic-javascript": "^3.0.2",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^9.8.6",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vite": "^2.0.0-beta.50"
   }
 }
