--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@prismicio/client": "^4.0.0",
     "prismic-dom": "^2.2.4",
-    "prismic-javascript": "^3.0.2",
     "vue": "^3.0.5",
     "vue-router": "^4.0.3"
   },
@@ -17,6 +17,6 @@
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^9.8.6",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
-    "vite": "^2.0.0-beta.50"
+    "vite": "^2.0.0-beta.65"
   }
 }
