--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
-    "autoprefixer": "^9.8.6",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
-    "vite": "^2.0.0-beta.66"
+    "autoprefixer": "^10.2.4",
+    "tailwindcss": "^2.0.3",
+    "vite": "^2.0.0-beta.68"
   }
 }
